--- a/index.html
+++ b/index.html
@@ -12,37 +12,41 @@
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <!-- CSS Style Sheet  -->
+    <link rel="stylesheet" href="./vendor/css/styles.css">
+
     <title>nhaus media</title>
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <nav class="nav">
             <div class="container">
-                <a href="">nhaus media</a>
-                <ul>
-                    <li>
-                        <a href="#">explore</a>
+                <a href="" class="nav_logo">nhaus media</a>
+
+                <ul class="nav_menu">
+                    <li class="nav_menuItem">
+                        <a class="nav_menuLink active" href="#">explore</a>
                     </li>
 
-                    <li>
-                        <a href="#">pricing</a>
+                    <li class="nav_menuItem">
+                        <a class="nav_menuLink" href="#">pricing</a>
                     </li>
 
-                    <li>
-                        <a href="#">carrer</a>
+                    <li class="nav_menuItem">
+                        <a class="nav_menuLink" href="#">carrer</a>
                     </li>
 
-                    <li>
-                        <a href="#">about</a>
+                    <li class="nav_menuItem">
+                        <a class="nav_menuLink" href="#">about</a>
                     </li>
 
-                    <li>
-                        <a href="#">social Media</a>
+                    <li class="nav_menuItem">
+                        <a class="nav_menuLink" href="#">social Media</a>
                     </li>
                 </ul>
-                <button>
-                    <a href="#">Try for Free</a>
+                <button class="button button_black">
+                    <a class="button_link" href="#">Try for free</a>
                 </button>
             </div>
         </nav>
@@ -78,6 +82,5 @@
 
     </footer>
 </body>
-
 
 </html>
