--- a/index.html
+++ b/index.html
@@ -51,19 +51,22 @@
             </div>
         </nav>
     </header>
-    <main>
 
+    <main>
         <!-- Main Section  -->
-        <section>
+        <section class="main">
             <div class="container">
-                <aside>
-                    <h1>create the brand you want with the edge you need</h1>
+                <aside class="main_contentLeft" background-color="blue">
+                    <h1 class="main_title">create the brand you want with the edge you need</h1>
                 </aside>
-                <aside>
-                    <div>
-                        How much will it costs the target audience is makes and families aged zero and up
-                        <button>
-                            <a href="#">explore services</a>
+
+                <aside class="main_contentRight">
+                    <div class="main_divRight">
+                        <p class="main_paragraph">
+                            How much will it costs the target audience is makes and families aged zero and up
+                        </p>
+                        <button class="button button_white">
+                            <a class="button_link" href="#">explore services</a>
                         </button>
                     </div>
                 </aside>
@@ -71,9 +74,9 @@
         </section>
 
         <!-- Banner Section  -->
-        <section>
+        <section class="banner">
             <div class="container">
-                <img src="./vendor/images/building_01.png" alt="">
+                <img  class="banner_img" src="./vendor/images/building_01.png" alt="">
             </div>
         </section>
 
