--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <!-- Main Section  -->
         <section class="main">
             <div class="container">
-                <aside class="main_contentLeft" background-color="blue">
+                <section class="main_contentLeft" background-color="blue">
                     <h1 class="main_title">create the brand you want with the edge you need</h1>
-                </aside>
+                </section>
 
-                <aside class="main_contentRight">
+                <div class="main_contentRight">
                     <div class="main_divRight">
                         <p class="main_paragraph">
                             How much will it costs the target audience is makes and families aged zero and up
@@ -69,14 +69,47 @@
                             <a class="button_link" href="#">explore services</a>
                         </button>
                     </div>
-                </aside>
+                </div>
             </div>
         </section>
 
         <!-- Banner Section  -->
         <section class="banner">
             <div class="container">
-                <img  class="banner_img" src="./vendor/images/building_01.png" alt="">
+                <img class="banner_img" src="./vendor/images/building_01.png" alt="Building Banner">
+            </div>
+        </section>
+
+        <section class="about">
+            <div class="container">
+                <h4>about us</h4>
+                <section>
+                    <h2>Value we give to you</h2>
+                    <img src="" alt="">
+                    <h3>media production services</h3>
+                    <p>Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
+                        maitrices et competences utiles a I'investissement immobilier
+                    </p>
+
+                    <button>
+                        <a href=""> explore pricing</a>
+                    </button>
+
+                </section>
+
+                <section>
+                    <img src="" alt="">
+
+                    <h3>digital marketing services</h3>
+
+                    <p>Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
+                        maitrices et competences utiles a I'investissement immobilier
+                    </p>
+
+                    <button>
+                        <a href=""> explore pricing</a>
+                    </button>
+                </section>
             </div>
         </section>
 
