--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <a class="nav_menuLink" href="#">social Media</a>
                     </li>
                 </ul>
-                <button class="button button_black">
-                    <a class="button_link" href="#">Try for free</a>
+                <button class="button button__black">
+                    <a class="button__link" href="#">Try for free</a>
                 </button>
             </div>
         </nav>
@@ -65,8 +65,8 @@
                         <p class="main_paragraph">
                             How much will it costs the target audience is makes and families aged zero and up
                         </p>
-                        <button class="button button_white">
-                            <a class="button_link" href="#">explore services</a>
+                        <button class="button button__white">
+                            <a class="button__link" href="#">explore services</a>
                         </button>
                     </div>
                 </div>
@@ -82,32 +82,35 @@
 
         <section class="about">
             <div class="container">
-                <h4>about us</h4>
-                <section>
-                    <h2>Value we give to you</h2>
-                    <img src="" alt="">
-                    <h3>media production services</h3>
-                    <p>Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
+                <h4 class="section__titleLable">about us</h4>
+                <section class="about__contentLeft">
+                    <h2 class="section__title">Value we give to you</h2>
+                    <img class="about__img" src="./vendor/images/building_02.jpg" alt="Building image">
+
+                    <h3 class="section__subtitle">media production services</h3>
+
+                    <p class="section__text">
+                        Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
                         maitrices et competences utiles a I'investissement immobilier
                     </p>
 
-                    <button>
-                        <a href=""> explore pricing</a>
+                    <button class="button button__black ">
+                        <a href="" class="button__link"> explore pricing</a>
                     </button>
 
                 </section>
 
-                <section>
-                    <img src="" alt="">
+                <section class="about__contentRight">
+                    <img  class="about__img" alt="Building image" src="./vendor/images/building_03.png">
 
-                    <h3>digital marketing services</h3>
+                    <h3 class="section__subtitle">digital marketing services</h3>
 
-                    <p>Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
+                    <p class="section__text">Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
                         maitrices et competences utiles a I'investissement immobilier
                     </p>
 
-                    <button>
-                        <a href=""> explore pricing</a>
+                    <button class="button button__black ">
+                        <a href="" class="button__link"> explore pricing</a>
                     </button>
                 </section>
             </div>
