--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+    <!-- google Icons  -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bookmark" />
+
     <!-- CSS Style Sheet  -->
     <link rel="stylesheet" href="./vendor/css/styles.css">
 
@@ -101,17 +105,93 @@
                 </section>
 
                 <section class="about__contentRight">
-                    <img  class="about__img" alt="Building image" src="./vendor/images/building_03.png">
+                    <img class="about__img" alt="Building image" src="./vendor/images/building_03.png">
 
                     <h3 class="section__subtitle">digital marketing services</h3>
 
-                    <p class="section__text">Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
+                    <p class="section__text">Archito group se presente como un outil pluridiciplinaire et complete
+                        regroupant diverses
                         maitrices et competences utiles a I'investissement immobilier
                     </p>
 
                     <button class="button button__black ">
                         <a href="" class="button__link"> explore pricing</a>
                     </button>
+                </section>
+            </div>
+        </section>
+
+        <section class="projects">
+            <div class="container">
+                <p class="section__titleLable">our project</p>
+                <section class="projects__content">
+                    <h2>Take a look to our successful projects</h2>
+                    <ul class="projects__list">
+                        <li class="projects__listItem">
+                            <span class="material-symbols-outlined">bookmark</span>
+                            <img class="projects__img" src="./vendor/images/building_04.jpg" alt="Building Image">
+                            <p class="project__description">
+                                I want to take it to the next level. can you use a high definition screenshot
+                                I really like the colour but, you can change it
+                            </p>
+                            <div class="projects__listWrap">
+                                <h3 class="projects__tittle">CX Design</h3>
+                                <p class="project__description">Barcelona, Spain</p>
+                            </div>
+                        </li>
+
+                        <li class="projects__listItem">
+                            <span class="material-symbols-outlined">bookmark</span>
+                            <img class="projects__img" src="./vendor/images/building_05.jpg" alt="Building Image">
+                            <p class="project__description">
+                                I want to take it to the next level. can you use a high definition screenshot
+                                I really like the colour but, you can change it
+                            </p>
+                            <div class="projects__listWrap">
+                                <h3 class="projects__tittle">CX Design</h3>
+                                <p class="project__description">Barcelona, Spain</p>
+                            </div>
+                        </li>
+
+                        <li class="projects__listItem">
+                            <span class="material-symbols-outlined">bookmark</span>
+                            <img class="projects__img" src="./vendor/images/building_06.jpg" alt="Building Image">
+                            <p class="project__description">
+                                I want to take it to the next level. can you use a high definition screenshot
+                                I really like the colour but, you can change it
+                            </p>
+                            <div class="projects__listWrap">
+                                <h3 class="projects__tittle">CX Design</h3>
+                                <p class="project__description">Barcelona, Spain</p>
+                            </div>
+                        </li>
+
+                        <li class="projects__listItem">
+                            <span class="material-symbols-outlined">bookmark</span>
+                            <img class="projects__img" src="./vendor/images/building_05.jpg" alt="Building Image">
+                            <p class="project__description">
+                                I want to take it to the next level. can you use a high definition screenshot
+                                I really like the colour but, you can change it
+                            </p>
+                            <div class="projects__listWrap">
+                                <h3 class="projects__tittle">CX Design</h3>
+                                <p class="project__description">Barcelona, Spain</p>
+                            </div>
+                        </li>
+
+                        <li class="projects__listItem">
+                            <span class="material-symbols-outlined">bookmark</span>
+                            <img class="projects__img" src="./vendor/images/building_08.jpg" alt="Building Image">
+                            <p class="project__description">
+                                I want to take it to the next level. can you use a high definition screenshot
+                                I really like the colour but, you can change it
+                            </p>
+                            <div class="projects__listWrap">
+                                <h3 class="projects__tittle">CX Design</h3>
+                                <p class="project__description">Barcelona, Spain</p>
+                            </div>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </section>
