--- a/index.html
+++ b/index.html
@@ -1,205 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--  Google Fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- google Icons  -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bookmark" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bookmark"
+    />
 
     <!-- CSS Style Sheet  -->
-    <link rel="stylesheet" href="./vendor/css/styles.css">
+    <link rel="stylesheet" href="./vendor/css/styles.css" />
 
     <title>nhaus media</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <nav class="nav">
-            <div class="container">
-                <a href="" class="nav_logo">nhaus media</a>
+      <nav class="nav">
+        <div class="container">
+          <a href="" class="nav_logo">nhaus media</a>
 
-                <ul class="nav_menu">
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink active" href="#">explore</a>
-                    </li>
+          <ul class="nav_menu">
+            <li class="nav_menuItem">
+              <a class="nav_menuLink active" href="#">explore</a>
+            </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">pricing</a>
-                    </li>
+            <li class="nav_menuItem">
+              <a class="nav_menuLink" href="#">pricing</a>
+            </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">carrer</a>
-                    </li>
+            <li class="nav_menuItem">
+              <a class="nav_menuLink" href="#">carrer</a>
+            </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">about</a>
-                    </li>
+            <li class="nav_menuItem">
+              <a class="nav_menuLink" href="#">about</a>
+            </li>
 
-                    <li class="nav_menuItem">
-                        <a class="nav_menuLink" href="#">social Media</a>
-                    </li>
-                </ul>
-                <button class="button button__black">
-                    <a class="button__link" href="#">Try for free</a>
-                </button>
-            </div>
-        </nav>
+            <li class="nav_menuItem">
+              <a class="nav_menuLink" href="#">social Media</a>
+            </li>
+          </ul>
+          <button class="button button__black">
+            <a class="button__link" href="#">Try for free</a>
+          </button>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <!-- Main Section  -->
-        <section class="main">
-            <div class="container">
-                <section class="main_contentLeft" background-color="blue">
-                    <h1 class="main_title">create the brand you want with the edge you need</h1>
-                </section>
+      <!-- Main Section  -->
+      <section class="main">
+        <div class="container">
+          <section class="main_contentLeft" background-color="blue">
+            <h1 class="main_title">
+              create the brand you want with the edge you need
+            </h1>
+          </section>
 
-                <div class="main_contentRight">
-                    <div class="main_divRight">
-                        <p class="main_paragraph">
-                            How much will it costs the target audience is makes and families aged zero and up
-                        </p>
-                        <button class="button button__white">
-                            <a class="button__link" href="#">explore services</a>
-                        </button>
-                    </div>
+          <div class="main_contentRight">
+            <div class="main_divRight">
+              <p class="main_paragraph">
+                How much will it costs the target audience is makes and families
+                aged zero and up
+              </p>
+              <button class="button button__white">
+                <a class="button__link" href="#">explore services</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Banner Section  -->
+      <section class="banner">
+        <div class="container">
+          <img
+            class="banner_img"
+            src="./vendor/images/building_01.png"
+            alt="Building Banner"
+          />
+        </div>
+      </section>
+
+      <!-- About Section  -->
+      <section class="about">
+        <div class="container">
+          <h4 class="section__titleLable">about us</h4>
+          <section class="about__contentLeft">
+            <h2 class="section__title">Value we give to you</h2>
+            <img
+              class="about__img"
+              src="./vendor/images/building_02.jpg"
+              alt="Building image"
+            />
+
+            <h3 class="section__subtitle">media production services</h3>
+
+            <p class="section__text">
+              Archito group se presente como un outil pluridiciplinaire et
+              complete regroupant diverses maitrices et competences utiles a
+              I'investissement immobilier
+            </p>
+
+            <button class="button button__black">
+              <a href="" class="button__link"> explore pricing</a>
+            </button>
+          </section>
+
+          <section class="about__contentRight">
+            <img
+              class="about__img"
+              alt="Building image"
+              src="./vendor/images/building_03.png"
+            />
+
+            <h3 class="section__subtitle">digital marketing services</h3>
+
+            <p class="section__text">
+              Archito group se presente como un outil pluridiciplinaire et
+              complete regroupant diverses maitrices et competences utiles a
+              I'investissement immobilier
+            </p>
+
+            <button class="button button__black">
+              <a href="" class="button__link"> explore pricing</a>
+            </button>
+          </section>
+        </div>
+      </section>
+
+      <!-- Projects Section  -->
+      <section class="projects">
+        <div class="container">
+          <p class="section__titleLable">our project</p>
+          <section class="projects__content">
+            <h2 class="section__title">Take a look to our success projects</h2>
+            <ul class="projects__list">
+              <li class="projects__listItem">
+                <img
+                  class="projects__img"
+                  src="./vendor/images/building_04.jpg"
+                  alt="Building Image"
+                />
+                <span class="material-symbols-outlined">bookmark</span>
+                <p class="project__description">
+                  I want to take it to the next level. can you use a high
+                  definition screenshot I really like the colour but, you can
+                  change it
+                </p>
+                <div class="projects__listWrap">
+                  <h3 class="projects__tittle">CX Design</h3>
+                  <p class="project__description">Barcelona, Spain</p>
                 </div>
-            </div>
-        </section>
+              </li>
 
-        <!-- Banner Section  -->
-        <section class="banner">
-            <div class="container">
-                <img class="banner_img" src="./vendor/images/building_01.png" alt="Building Banner">
-            </div>
-        </section>
+              <li class="projects__listItem">
+                <img
+                  class="projects__img"
+                  src="./vendor/images/building_05.jpg"
+                  alt="Building Image"
+                />
+                <span class="material-symbols-outlined">bookmark</span>
+                <p class="project__description">
+                  I want to take it to the next level. can you use a high
+                  definition screenshot I really like the colour but, you can
+                  change it
+                </p>
+                <div class="projects__listWrap">
+                  <h3 class="projects__tittle">digital marketing project</h3>
+                  <p class="project__description">Brujas, Belgium</p>
+                </div>
+              </li>
 
-        <section class="about">
-            <div class="container">
-                <h4 class="section__titleLable">about us</h4>
-                <section class="about__contentLeft">
-                    <h2 class="section__title">Value we give to you</h2>
-                    <img class="about__img" src="./vendor/images/building_02.jpg" alt="Building image">
+              <li class="projects__listItem">
+                <img
+                  class="projects__img"
+                  src="./vendor/images/building_06.jpg"
+                  alt="Building Image"
+                />
+                <span class="material-symbols-outlined">bookmark</span>
+                <p class="project__description">
+                  I want to take it to the next level. can you use a high
+                  definition screenshot I really like the colour but, you can
+                  change it
+                </p>
+                <div class="projects__listWrap">
+                  <h3 class="projects__tittle">Media Production</h3>
+                  <p class="project__description">Sao Paulo, Brazil</p>
+                </div>
+              </li>
 
-                    <h3 class="section__subtitle">media production services</h3>
+              <li class="projects__listItem">
+                <img
+                  class="projects__img"
+                  src="./vendor/images/building_07.jpg"
+                  alt="Building Image"
+                />
+                <span class="material-symbols-outlined">bookmark</span>
 
-                    <p class="section__text">
-                        Archito group se presente como un outil pluridiciplinaire et complete regroupant diverses
-                        maitrices et competences utiles a I'investissement immobilier
-                    </p>
+                <p class="project__description">
+                  I want to take it to the next level. can you use a high
+                  definition screenshot I really like the colour but, you can
+                  change it
+                </p>
+                <div class="projects__listWrap">
+                  <h3 class="projects__tittle">Copywriting project</h3>
+                  <p class="project__description">Oslo, Norway</p>
+                </div>
+              </li>
 
-                    <button class="button button__black ">
-                        <a href="" class="button__link"> explore pricing</a>
-                    </button>
-
-                </section>
-
-                <section class="about__contentRight">
-                    <img class="about__img" alt="Building image" src="./vendor/images/building_03.png">
-
-                    <h3 class="section__subtitle">digital marketing services</h3>
-
-                    <p class="section__text">Archito group se presente como un outil pluridiciplinaire et complete
-                        regroupant diverses
-                        maitrices et competences utiles a I'investissement immobilier
-                    </p>
-
-                    <button class="button button__black ">
-                        <a href="" class="button__link"> explore pricing</a>
-                    </button>
-                </section>
-            </div>
-        </section>
-
-        <section class="projects">
-            <div class="container">
-                <p class="section__titleLable">our project</p>
-                <section class="projects__content">
-                    <h2>Take a look to our successful projects</h2>
-                    <ul class="projects__list">
-                        <li class="projects__listItem">
-                            <span class="material-symbols-outlined">bookmark</span>
-                            <img class="projects__img" src="./vendor/images/building_04.jpg" alt="Building Image">
-                            <p class="project__description">
-                                I want to take it to the next level. can you use a high definition screenshot
-                                I really like the colour but, you can change it
-                            </p>
-                            <div class="projects__listWrap">
-                                <h3 class="projects__tittle">CX Design</h3>
-                                <p class="project__description">Barcelona, Spain</p>
-                            </div>
-                        </li>
-
-                        <li class="projects__listItem">
-                            <span class="material-symbols-outlined">bookmark</span>
-                            <img class="projects__img" src="./vendor/images/building_05.jpg" alt="Building Image">
-                            <p class="project__description">
-                                I want to take it to the next level. can you use a high definition screenshot
-                                I really like the colour but, you can change it
-                            </p>
-                            <div class="projects__listWrap">
-                                <h3 class="projects__tittle">CX Design</h3>
-                                <p class="project__description">Barcelona, Spain</p>
-                            </div>
-                        </li>
-
-                        <li class="projects__listItem">
-                            <span class="material-symbols-outlined">bookmark</span>
-                            <img class="projects__img" src="./vendor/images/building_06.jpg" alt="Building Image">
-                            <p class="project__description">
-                                I want to take it to the next level. can you use a high definition screenshot
-                                I really like the colour but, you can change it
-                            </p>
-                            <div class="projects__listWrap">
-                                <h3 class="projects__tittle">CX Design</h3>
-                                <p class="project__description">Barcelona, Spain</p>
-                            </div>
-                        </li>
-
-                        <li class="projects__listItem">
-                            <span class="material-symbols-outlined">bookmark</span>
-                            <img class="projects__img" src="./vendor/images/building_05.jpg" alt="Building Image">
-                            <p class="project__description">
-                                I want to take it to the next level. can you use a high definition screenshot
-                                I really like the colour but, you can change it
-                            </p>
-                            <div class="projects__listWrap">
-                                <h3 class="projects__tittle">CX Design</h3>
-                                <p class="project__description">Barcelona, Spain</p>
-                            </div>
-                        </li>
-
-                        <li class="projects__listItem">
-                            <span class="material-symbols-outlined">bookmark</span>
-                            <img class="projects__img" src="./vendor/images/building_08.jpg" alt="Building Image">
-                            <p class="project__description">
-                                I want to take it to the next level. can you use a high definition screenshot
-                                I really like the colour but, you can change it
-                            </p>
-                            <div class="projects__listWrap">
-                                <h3 class="projects__tittle">CX Design</h3>
-                                <p class="project__description">Barcelona, Spain</p>
-                            </div>
-                        </li>
-                    </ul>
-                </section>
-            </div>
-        </section>
-
+              <li class="projects__listItem">
+                <img
+                  class="projects__img"
+                  src="./vendor/images/building_08.jpg"
+                  alt="Building Image"
+                />
+                <span class="material-symbols-outlined">bookmark</span>
+                <p class="project__description">
+                  I want to take it to the next level. can you use a high
+                  definition screenshot I really like the colour but, you can
+                  change it
+                </p>
+                <div class="projects__listWrap">
+                  <h3 class="projects__tittle">
+                    Expert reels & influencer videos
+                  </h3>
+                  <p class="project__description">Barcelona, Spain</p>
+                </div>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
