--- a/index.html
+++ b/index.html
@@ -241,6 +241,43 @@
               </li>
             </ul>
           </section>
+
+          <button class="button button__black">
+            <a href="" class="button__link"> explore pricing</a>
+          </button>
+        </div>
+      </section>
+
+      <section class="stories">
+        <div class="container">
+          <h4 class="section__titleLable">our stories</h4>
+          <section class="stories__contentLeft">
+            <h2 class="section__title">What our customers say</h2>
+            <img
+              class="stories__img"
+              src="./vendor/images/peopple_01.jpg"
+              alt="Peopple Image"
+            />
+          </section>
+
+          <section class="stories__contentRight">
+            <div class="stories__wrap">
+              <h3 class="section__subtitle">
+                stories that inspire actions & connections
+              </h3>
+
+              <p class="section__text">
+                Depois plus de 10 ans, ROUSSEAU N°5 est une agencie immobiliere
+                genevoise reputee pour la qualite de son cataloge o'bjects, son
+                expertise en fixation de prix de vente ed pour la presicion de
+                son accompagnement sur mesure
+              </p>
+
+              <button class="button button__white">
+                <a href="" class="button__link">learn more</a>
+              </button>
+            </div>
+          </section>
         </div>
       </section>
     </main>
