--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         </div>
       </section>
 
+      <!-- Stories Section  -->
       <section class="stories">
         <div class="container">
           <h4 class="section__titleLable">our stories</h4>
@@ -278,6 +279,59 @@
               </button>
             </div>
           </section>
+        </div>
+      </section>
+
+      <!-- Stories Section  -->
+      <section class="whyChoose">
+        <div class="container">
+          <h4 class="section__titleLable">why choose us</h4>
+          <ul class="whyChoose__list">
+            <li class="whyChoose__item">
+              <h3 class="section__title">We have all the mandatory aspects</h3>
+
+              <p class="section__text">
+                Depois plus de 10 ans, ROUSSEAU N°5 est une agencie immobiliere
+                genevoise reputee pour la qualite de son cataloge o'bjects, son
+                expertise en fixation de prix de vente ed pour la presicion de
+                son accompagnement sur mesure
+              </p>
+
+              <button class="button button__white">
+                <a href="" class="button__link">learn more</a>
+              </button>
+            </li>
+
+            <li class="whyChoose__item">
+              <h5 class="whyChoose__itemTitle">communication</h5>
+              <p class="section__text">
+                I want to take it to the next level. can you use a high
+                definition screenshot I really like the colour but, you can
+                change it
+              </p>
+              <a class="whyChoose__itemTitle" href="#">check here</a>
+            </li>
+
+            <li class="whyChoose__item">
+              <h5 class="whyChoose__itemTitle">families</h5>
+              <p class="section__text">
+                I want to take it to the next level. can you use a high
+                definition screenshot I really like the colour but, you can
+                change it
+              </p>
+              <a class="whyChoose__itemTitle" href="#">check here</a>
+            </li>
+
+            <li class="whyChoose__item">
+              <h5 class="whyChoose__itemTitle">quality first</h5>
+              <p class="section__text">
+                I want to take it to the next level. can you use a high
+                definition screenshot I really like the colour but, you can
+                change it
+              </p>
+              <a class="whyChoose__itemTitle" href="#">check here</a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
