--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
         </section>
 
         <!-- Testimonials   -->
-        <div class="testimonials">
+        <section class="testimonials">
             <div class="container">
                 <h3 class="section__titleLable">testimonials</h3>
-                
+
                 <h2 class="section__title">Why or client love us</h2>
 
                 <section class="testimonials__cards">
@@ -372,9 +372,119 @@
                     </li>
 
                 </ul>
-                
+
             </div>
-        </div>
+        </section>
+
+        <!-- Blog   -->
+        <section class="blog">
+            <div class="container">
+                <h3 class="section__titleLable">our bloh</h3>
+                <h2 class="section__title">Latest News & Career</h2>
+                <ul class="blog__list">
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <img class="blog__image" src="./vendor/images/house_01.jpg" alt="House Image">
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <img class="blog__image" src="./vendor/images/house_04.jpg" alt="House Image">
+
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <img class="blog__image" src="./vendor/images/house_03.jpg" alt="House Image">
+
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="blog__item">
+                        <a href="" class="blog__link">
+                            <img class="blog__image" src="./vendor/images/house_02.jpg" alt="House Image">
+
+                            <div class="blog__wrap">
+                                <section class="blog__content">
+                                    <div class="blog__info">
+                                        <p class="blog__infoText">6 September, 2022</p>
+                                        <p class="blog__infoText">Al Rasi Siam</p>
+                                    </div>
+
+                                    <h4 class="blog__title">
+                                        Archito will ready in less than a year to make your
+                                        property
+                                    </h4>
+                                    <p class="section__text">
+                                        When applied to building block a website or similar work product, a Visual gGide
+                                        can...
+                                    </p>
+                                </section>
+                            </div>
+                        </a>
+                    </li>
+
+                </ul>
+
+                <button class="button button__white">
+                    <a href="" class="button__link">learn more</a>
+                </button>
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 </body>
