Jumbotron-html/css

--- a/index.html
+++ b/index.html
@@ -485,6 +485,16 @@
             </div>
 
         </section>
+
+        <!-- Jumbotron   -->
+        <section class="jumbotron">
+            <div class="container">
+                <h2 class="section__title section__title-white">Start your journey with us now</h2>
+                <button class="button button__whiteBorderless">
+                    <a href="#" class="button__link">explore all</a>
+                </button>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
