--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <!-- google Icons  -->
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bookmark" />
-
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- CSS Style Sheet  -->
     <link rel="stylesheet" href="./vendor/css/styles.css" />
 
@@ -495,8 +494,98 @@
                 </button>
             </div>
         </section>
+
+        <!-- FAQ   -->
+        <section class="faq">
+            <div class="container">
+                <section class="faq__questions">
+                    <h2 class="section__title section__title-upercase">got Questions? we got answers</h2>
+                    <ul class="faq__questionsList">
+                        <li class="faq__item">
+                            <p class="faq__question">How do I sign up for a proyect?
+                                <span class="material-symbols-outlined faq__btn">
+                                    add_circle
+                                </span>
+                            </p>
+
+                            <p class="faq__answer section__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita voluptas qui totam
+                                delectus doloribus facere, voluptates consequuntur quis ullam quod cupiditate illum
+                                aperiam eius sit dolores animi ratione numquam consequatur.
+                            </p>
+                        </li>
+
+                        <li class="faq__item">
+                            <p class="faq__question">What thing I should prepare before starting?
+                                <span class="material-symbols-outlined faq__btn" >
+                                    add_circle
+                                </span>
+                            </p>
+
+                            <p class="faq__answer section__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita voluptas qui totam
+                                delectus doloribus facere, voluptates consequuntur quis ullam quod cupiditate illum
+                                aperiam eius sit dolores animi ratione numquam consequatur.
+                            </p>
+                        </li>
+
+                        <li class="faq__item">
+                            <p class="faq__question">What thing I should prepare before starting?
+                                <span class="material-symbols-outlined faq__btn">
+                                    add_circle
+                                </span>
+                            </p>
+
+                            <p class="faq__answer section__text ">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita voluptas qui totam
+                                delectus doloribus facere, voluptates consequuntur quis ullam quod cupiditate illum
+                                aperiam eius sit dolores animi ratione numquam consequatur.
+                            </p>
+                        </li>
+
+                        <li class="faq__item">
+                            <p class="faq__question">Does my company needhelp for marketing advices?
+                                <span class="material-symbols-outlined faq__btn">
+                                    add_circle
+                                </span>
+                            </p>
+
+                            <p class="faq__answer section__text">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita voluptas qui totam
+                                delectus doloribus facere, voluptates consequuntur quis ullam quod cupiditate illum
+                                aperiam eius sit dolores animi ratione numquam consequatur.
+                            </p>
+                        </li>
+                    </ul>
+
+                </section>
+
+                <section class="faq__newsletter">
+                    <h3 class="faq__subtitle">how we can help you?</h3>
+
+                    <p class="section__text section__text-white">
+                        Follow our newsletter, we will regulary update our latest projects and availability
+                    </p>
+
+                    <form action="" class="faq__form"> 
+                        <input type="text" class="faq__input" placeholder="Enter your email">
+                        <button class="button button__white">
+                            <a href="#" class="button__link">let's talk</a>
+                        </button>
+                    </form>
+
+                    <a href="#" class="faq__link">More FAQ
+                        <span class="material-symbols-outlined">
+                            arrow_forward
+                        </span>
+                    </a>
+                </section>
+            </div>
+        </section>
     </main>
     <footer></footer>
+
+    <script src="./vendor/js/scripts.js"></script>
 </body>
 
 </html>
