footer-html-css

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
                         <li class="faq__item">
                             <p class="faq__question">What thing I should prepare before starting?
-                                <span class="material-symbols-outlined faq__btn" >
+                                <span class="material-symbols-outlined faq__btn">
                                     add_circle
                                 </span>
                             </p>
@@ -567,7 +567,7 @@
                         Follow our newsletter, we will regulary update our latest projects and availability
                     </p>
 
-                    <form action="" class="faq__form"> 
+                    <form action="" class="faq__form">
                         <input type="text" class="faq__input" placeholder="Enter your email">
                         <button class="button button__white">
                             <a href="#" class="button__link">let's talk</a>
@@ -583,7 +583,51 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+        <div class="container">
+            <section class="footer__section">
+                <p class="footer__subtitle">phone</p>
+                <address class="footer__contact"> +7 499 322 16 67</address>
+                <p class="footer__subtitle">address</p>
+                <address class="footer__contact">734 brodway, floor 5 new yor, NY 10003</address>
+            </section>
+
+            <section class="footer__section">
+                <p class="footer__subtitle">email</p>
+                <address class="footer__contact-email">nhausmedia@mail.com</address>
+
+                <p class="footer__subtitle">folow us</p>
+
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__social">
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__social">
+                        </a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__social">
+                        </a>
+                    </li>
+                </ul>
+
+            </section>
+
+            <section class="footer__section">
+                <h2 class="footer__title">nHaus</h2>
+                <p class="section__text section__text-white">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi fugiat veniam praesentium!
+                    Quibusdam sed inventore ducimus earum, fuga odio. Nisi ipsam provident sint aliquid hic
+                    exercitationem voluptatem ratione recusandae voluptatibus!
+                </p>
+            </section> 
+
+            <p class="footer__copyright">&copy All rights reserved 2022 - designed by digital, powered by webflow</p>
+        </div>
+    </footer>
 
     <script src="./vendor/js/scripts.js"></script>
 </body>
