--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Banner Section  -->
         <section class="banner">
             <div class="container">
-                <img class="banner_img" src="./vendor/images/building_01.png" alt="Building Banner" />
+                <img class="banner_img" src="./vendor/images/building_01.jpg" alt="Building Banner" />
             </div>
         </section>
 
@@ -108,7 +108,7 @@
                 </section>
 
                 <section class="about__contentRight">
-                    <img class="about__img" alt="Building image" src="./vendor/images/building_03.png" />
+                    <img class="about__img" alt="Building image" src="./vendor/images/building_03.jpg" />
 
                     <h3 class="section__subtitle">digital marketing services</h3>
 
